@@ -2,12 +2,12 @@
 
 SUBDIRS = libxml++ docs examples
 
-EXTRA_DIST = libxml++-2.8.pc.in libxml++.spec.in
+EXTRA_DIST = libxml++-2.6.pc.in libxml++.spec.in
 
 DIST_SUBDIRS = $(SUBDIRS) win32_msvc6
 
 # Install the pkg-config file:
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = libxml++-2.8.pc
+pkgconfig_DATA = libxml++-2.6.pc
 
 
