@@ -10,7 +10,7 @@ AC_SUBST(GENERIC_MINOR_VERSION)
 AC_SUBST(GENERIC_VERSION)
 
 #shared library versioning
-GENERIC_LIBRARY_VERSION=1:0:0
+GENERIC_LIBRARY_VERSION=1:2:0
 #                       | | |
 #                +------+ | +---+
 #                |        |     |
@@ -76,6 +76,6 @@ AC_OUTPUT(
   win32_msvc6/Makefile
     win32_msvc6/examples/Makefile
 
-  libxml++-2.8.pc
+  libxml++-2.6.pc
   libxml++.spec
 )
